--- a/htmlFiles/tempConversion.html
+++ b/htmlFiles/tempConversion.html
@@ -1,24 +1,8 @@
 <!DOCTYPE html>
-
 <html>
-
 <body>
-<!-- <div id="displayFarenheit"></div>
-<br>
-<div id="displayCelcius"></div>
-<br> -->
-
-<form>
-    <!--- To select only one radio button give the radio buttons the same name---->
-Farenheit <input id="farenheit" type="radio" name="tempType" value="farenheitTemp">
-Celcius <input id="celcius" type="radio" name="tempType" value="celciusTemp">
-<br>
-
-<label>The Converted Temperature is...</label>
-<input type="text" id="convertedTemp" value="tempValue">
-</form>
-
+    <label>The Converted Temperature is</label>
+    <p id="convertedTemp"></p>
 <script src="../scripts/tempConversion.js"></script>
 </body>
-
 </html>
